--- a/assets/styles/components/home.css
+++ b/assets/styles/components/home.css
@@ -142,7 +142,7 @@
   align-items: center;
   justify-content: center;
   background: linear-gradient(var(--overlay), var(--overlay)),
-    url("assets/images/img0.jpg");
+    url("../../images/img0.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
