--- a/assets/styles/utils.css
+++ b/assets/styles/utils.css
@@ -76,6 +76,17 @@
   box-shadow: 0 6px 20px rgba(44, 62, 80, 0.4);
   color: white;
 }
+.btn-primary2 {
+  background: none;
+  color: var(--link-color);
+  box-shadow: 0 4px 15px rgba(44, 62, 80, 0.3);
+  border-color: var(--link-color);
+}
+.btn-primary2:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 6px 20px rgba(44, 62, 80, 0.4);
+  color: white;
+}
 .btn-secondary {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
@@ -153,10 +164,20 @@
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-
 @media (min-width: 325px) {
   .container {
     max-width: 325px;
+  }
+}
+
+@media (min-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
+}
+@media (min-width: 415px) {
+  .container {
+    max-width: 415px;
   }
 }
 
