--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -85,6 +85,9 @@
   font-weight: 900;
   font-style: italic;
 }
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* ===========================================
     CSS VARIABLES & THEME SETUP
